Fixed button spacing on global nav

--- a/client/src/components/GlobalNavBar/style.css
+++ b/client/src/components/GlobalNavBar/style.css
@@ -6,6 +6,10 @@
 .global-nav__btn-group {
     display: flex;
 }
+
+.global-nav__btn-group > button {
+    margin-right: 20px;
+}
   
 .global-nav__nav-dashboards {
     background-color: #143642;
