--- a/client/src/global.css
+++ b/client/src/global.css
@@ -246,3 +246,32 @@ Vehicle Dashboard
   font-weight: bold;
   border: none;
 }
+
+
+
+/* —————————————————————————————————————
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+////////////////////////////////////////
+
+Mobile Styles
+
+////////////////////////////////////////
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+———————————————————————————————————————*/
+
+@media only screen and (max-width: 575px) {
+  /* —————————————————————————————————————
+  Bootstrap Overrides
+  ———————————————————————————————————————*/
+  .navbar-brand {
+    margin-right: 0;
+    margin-bottom: 8px;
+  }
+
+  /* .navbar-expand .navbar-nav {
+    width: 100%;
+  } */
+
+
+
+}
